--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
   <html lang="">
     <head>
       <meta charset="utf-8">
-      <title>Plucking Mango</title>
-      <script src="libraries/matter.js"></script>
-      <script src="libraries/p5.js"></script>
-      <script src="libraries/p5.play.js"></script>
-
-      <script src="sketch.js"></script>
-      <script src="js/tree.js"></script>
-      <script src="js/stone.js"></script>
-      <script src="js/ground.js"></script>
-      <script src="js/mango.js"></script>
-      <script src="js/Stand.js"></script>
-      <script src="js/launcher.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Crumpled Paper</title>
+      <style> body {padding: 0; margin: 0;} </style>
+      <script src="matter.js"></script>
+      <script src="p5.js"></script>
+      <script src="p5.play.js"></script>
       
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <script src="sketch.js"></script>
+      <script src="dustbin.js"></script>
+      <script src="ground.js"></script>
+      <script src="Paper.js"></script>
     </head>
     <body>
     </body>
